fix z-index some time is below the element.

--- a/main.css
+++ b/main.css
@@ -2,4 +2,5 @@
 	background:#922d2d;
 	color:white;
 	padding:1em;
+	z-index:999;
 }
